fixed dark mode issue and cleaned up other things.

--- a/personal-site/src/components/Slideshow.css
+++ b/personal-site/src/components/Slideshow.css
@@ -12,6 +12,10 @@
     transition: ease 1500ms;
   }
   
+  .slideshowImg {
+    width: 60%
+  }
+
   .slide {
     display: inline-block;
     align-items: center;
